kyverno/base/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: block-privileged-containers
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - dev
      validate:
        message: "Privileged containers are not allowed in the dev namespace."
        pattern:
          spec:
            containers:
              - name: "*"
                =(securityContext):
                  =(privileged): false
